Fixed console logs and scrollbar

--- a/client/src/tailwind.css
+++ b/client/src/tailwind.css
@@ -142,19 +142,6 @@ input {
   border-color: #222;
 }
 
-::-webkit-scrollbar {
-  width: 15px;
-  z-index: 10;
-}
-
-::-webkit-scrollbar-track {
-  background-color: #595959;
-}
-
-::-webkit-scrollbar-thumb {
-  background: #48ba86;
-}
-
 #root {
   height: 100%;
   overflow: auto;
